--- a/days/w2d3/gpt.ipynb
+++ b/days/w2d3/gpt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,14 @@
     "import torchtext\n",
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
-    "import gpt_tests"
+    "import gpt_tests\n",
+    "import bert_sol\n",
+    "import bert_tests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,21 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "cannot assign module before Module.__init__() call",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-32cf395ff8d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mGPT2Output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogits\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfinal_encodings\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0mgpt_tests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_gpt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGPT2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/mlab/days/w2d3/gpt_tests.py\u001b[0m in \u001b[0;36mtest_gpt\u001b[0;34m(GPT2)\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m     \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmanual_seed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1010\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m     \u001b[0mgpt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGPT2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m     \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgpt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Checking final encodings:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-6-32cf395ff8d6>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, num_layers, num_heads, vocab_size, hidden_size, max_position_embeddings, dropout, layer_norm_epsilon)\u001b[0m\n\u001b[1;32m      3\u001b[0m                 \u001b[0mhidden_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_position_embeddings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdropout\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                 layer_norm_epsilon):\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoken_embedding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEmbedding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhidden_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mposition_embedding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEmbedding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_position_embeddings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhidden_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdropout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDropout\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdropout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__setattr__\u001b[0;34m(self, name, value)\u001b[0m\n\u001b[1;32m   1204\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mModule\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1205\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mmodules\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1206\u001b[0;31m                     raise AttributeError(\n\u001b[0m\u001b[1;32m   1207\u001b[0m                         \"cannot assign module before Module.__init__() call\")\n\u001b[1;32m   1208\u001b[0m                 \u001b[0mremove_from\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_buffers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_non_persistent_buffers_set\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: cannot assign module before Module.__init__() call"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking final encodings:\n",
+      "Congrats! You've passed the test!\n",
+      "Checking logits:\n",
+      "Congrats! You've passed the test!\n"
      ]
     }
    ],
@@ -153,6 +151,7 @@
     "            *[GPT2Block(hidden_size, num_heads, dropout, layer_norm_epsilon) \n",
     "                for i in range(num_layers)]\n",
     "        )\n",
+    "        self.last_token_encodings = None\n",
     "        self.layer_norm = nn.LayerNorm(hidden_size, layer_norm_epsilon)\n",
     "\n",
     "    def forward(self, input_ids): # [batch, seq_len]\n",
@@ -163,6 +162,7 @@
     "        embedding = tokens + positions\n",
     "        x = self.dropout(embedding)\n",
     "        x = self.GPTBlocks(x)\n",
+    "        self.last_token_encodings = x\n",
     "        final_encodings = self.layer_norm(x)[:,-1,:]\n",
     "        logits = einsum('b c, v c -> b v', final_encodings, self.token_embedding.weight)\n",
     "        return GPT2Output(logits, final_encodings)\n",
@@ -172,10 +172,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_gpt = GPT2(num_layers=12, num_heads=12, vocab_size=50257, \n",
+    "    hidden_size=768, max_position_embeddings=1024, dropout=0.1, \n",
+    "    layer_norm_epsilon=1e-5)\n",
+    "\n",
+    "pretrained_gpt = gpt_tests.get_pretrained_gpt()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_dict = {}\n",
+    "pretrained_dict = pretrained_gpt.state_dict()\n",
+    "for a,b in zip(pretrained_dict.keys(), my_gpt.state_dict().keys()):\n",
+    "    new_dict[b] = pretrained_dict[a] \n",
+    "my_gpt.load_state_dict(new_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = transformers.GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
+    "bert_tokenizer = transformers.AutoTokenizer.from_pretrained(\"bert-base-cased\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My life motto: \"\n",
+      "My life motto: \"Don\n",
+      "My life motto: \"Don't\n",
+      "My life motto: \"Don't be\n",
+      "My life motto: \"Don't be afraid\n",
+      "My life motto: \"Don't be afraid to\n",
+      "My life motto: \"Don't be afraid to be\n",
+      "My life motto: \"Don't be afraid to be yourself\n",
+      "My life motto: \"Don't be afraid to be yourself.\"\n",
+      "My life motto: \"Don't be afraid to be yourself.\"\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generateText(model, text):\n",
+    "    model.eval()\n",
+    "    tokens = torch.tensor(tokenizer.encode(text), dtype=torch.long).unsqueeze(0)\n",
+    "    gpt_output = model(tokens)\n",
+    "    predicted_word = gpt_output.logits.argmax(dim=-1)\n",
+    "    new_text = text + tokenizer.decode(predicted_word.item())\n",
+    "    return new_text\n",
+    "\n",
+    "text = \"My life motto:\"\n",
+    "for _ in range(10):\n",
+    "    text = generateText(my_gpt, text)\n",
+    "    print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
+      "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_bert = bert_sol.Bert(\n",
+    "    vocab_size=28996, hidden_size=768, max_position_embeddings=512, \n",
+    "    type_vocab_size=2, dropout=0.1, intermediate_size=3072, \n",
+    "    num_heads=12, num_layers=12\n",
+    ")\n",
+    "pretrained_bert = bert_tests.get_pretrained_bert()\n",
+    "mapped_params = {bert_sol.mapkey(k): v for k, v in pretrained_bert.state_dict().items()\n",
+    "                if not k.startswith('classification_head')}\n",
+    "my_bert.load_state_dict(mapped_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We now have my_bert, my_gpt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[  101,  1422,  1297, 13658,   131,   102,     0,     0,     0,     0],\n",
+      "        [  101,  1422,  1297, 13658,   131, 14555,   102,     0,     0,     0],\n",
+      "        [  101,  1422,  1297, 13658,   131, 14555, 24208,   102,     0,     0],\n",
+      "        [  101,  1422,  1297, 13658,   131, 14555, 24208,  1103,   102,     0],\n",
+      "        [  101,  1422,  1297, 13658,   131, 14555, 24208,  1103,  9009,   102]])\n",
+      "BERT\n",
+      "tensor([[ 1.0108,  1.0003, -0.0554,  ...,  0.4157,  0.4293,  0.1067],\n",
+      "        [ 0.4482, -0.0443,  0.1862,  ..., -0.3393,  0.4696,  0.0145],\n",
+      "        [ 0.0276, -0.0032,  0.2345,  ...,  0.3751,  0.4144,  0.0836],\n",
+      "        [ 0.1360, -0.0919,  0.2080,  ...,  0.5545,  0.4430,  0.1225],\n",
+      "        [ 0.0215, -0.0751,  0.1236,  ...,  0.6215,  0.4317,  0.2077]],\n",
+      "       grad_fn=<SliceBackward0>)\n",
+      "torch.Size([5, 10, 768])\n",
+      "tensor([[ 10.6008,   0.4824,  -0.8409,  ...,   3.7044,   2.1718,  -1.7908],\n",
+      "        [  2.2354,   4.2186,  -8.5184,  ...,  -1.7431,   6.8043, -18.0181],\n",
+      "        [  2.2354,   4.2186,  -8.5184,  ...,  -1.7431,   6.8043, -18.0182],\n",
+      "        [  2.2354,   4.2186,  -8.5184,  ...,  -1.7431,   6.8043, -18.0182],\n",
+      "        [  2.2354,   4.2186,  -8.5184,  ...,  -1.7431,   6.8043, -18.0181]],\n",
+      "       grad_fn=<SliceBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this is to demonstrate that in gpt the logits for a token \n",
+    "# only depends on earlier tokens in the sequence, whereas that's not\n",
+    "# true for BERT\n",
+    "strings = \"\"\"My life motto:\n",
+    "My life motto: Fortune\n",
+    "My life motto: Fortune favors\n",
+    "My life motto: Fortune favors the\n",
+    "My life motto: Fortune favors the bold\"\"\"\n",
+    "strings = strings.split(\"\\n\")\n",
+    "strings = [bert_tokenizer.encode(s) for s in strings]\n",
+    "pad_length = 10\n",
+    "strings = torch.tensor([s + [0]*(pad_length-len(s)) for s in strings], dtype = torch.long)\n",
+    "print(strings)\n",
+    "\n",
+    "my_bert.eval()\n",
+    "my_bert(strings)\n",
+    "print(\"BERT\")\n",
+    "print(my_bert.last_token_encodings[:,3,:])\n",
+    "\n",
+    "my_gpt.eval()\n",
+    "my_gpt(strings) \n",
+    "print(\"GPT\")\n",
+    "print(my_gpt.last_token_encodings[:,3,:])\n"
+   ]
   }
  ],
  "metadata": {
